--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,1 +1,5 @@
-<h1>Dating App</h1>
+<app-navbar></app-navbar>
+
+<div class="container" style="margin-top: 100px;">
+    <router-outlet></router-outlet>
+</div>
