--- a/client/src/app/messages/messages.component.html
+++ b/client/src/app/messages/messages.component.html
@@ -1,1 +1,53 @@
-<p>messages works!</p>
+<div class="row mb-4">
+    <div class="btn-group" name='container'>
+        <button class="btn btn-primary" btnRadio='Unread' [(ngModel)]="container" 
+            (click)="loadMessages()">
+            <i class="fa fa-envelope"></i> Unread
+        </button>
+        <button class="btn btn-primary" btnRadio='Inbox' [(ngModel)]="container" 
+            (click)="loadMessages()">
+            <i class="fa fa-envelope-open"></i> Inbox
+        </button>
+        <button class="btn btn-primary" btnRadio='Outbox' [(ngModel)]="container" 
+            (click)="loadMessages()">
+            <i class="fa fa-paper-plane"></i> Outbox
+        </button>
+    </div>
+</div>
+
+<div class="row" *ngIf="messages?.length === 0">
+    <h3>You have no Messages</h3>
+</div>
+
+<div class="row" *ngIf="messages?.length > 0">
+    <table class="table table-hover">
+        <tr>
+            <th style="width: 40%;">Message</th>
+            <th style="width: 20%;">From / To</th>
+            <th style="width: 20%;">Sent / Received</th>
+            <th style="width: 20%;"></th>
+        </tr>
+        <tr *ngFor="let message of messages" routerLink='{{container === "Outbox" ? "/members/" + message.recipientName : "/members/" + message.senderName}}' [queryParams]='{tab: 3}'>
+            <td style="width: 40%;">{{message.content}}</td>
+            <td style="width: 20%;">
+                <div *ngIf="container === 'Outbox'">
+                    <img 
+                        class="img-circle rounder-circle mr-2"
+                        src="{{message.recipientPhotoUrl || 'assets/user.png'}}" 
+                        lt="{{message.recipientName}}">
+                </div>
+                <div *ngIf="container !== 'Outbox'">
+                    <img 
+                        class="img-circle rounder-circle mr-2"
+                        src="{{message.senderPhotoUrl || 'assets/user.png'}}" 
+                        alt="{{message.senderName}}">
+                </div>
+            </td>
+            <td style="width: 20%;">{{message.messageSent}}</td>
+            <td style="width: 20%;">
+                <button class="btn btn-danger">Delete</button>
+            </td>
+        </tr>
+    </table>
+</div>
+ 
