--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -15,8 +15,8 @@
             </ng-container>
         </ul>
         <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-            <img src="{{user.photoUrl}}" alt="{{user.username}}" class="image-style">
-            <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username}}</a>
+            <img src="{{user.photoUrl || 'assets/user.png'}}" alt="{{user.username}}" class="image-style">
+            <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.knownAs}}</a>
             <div class="dropdown-menu" *dropdownMenu>
                 <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
                 <div class="dropdown-divider"></div>
